[package]
name = "hyper-microservice-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1", features = ["full"] }
slab = "0.4"
lazy_static = "1.0"
regex = "1.0"